--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Password Generator</h1>
+<!-- <h1>Password Generator</h1>
 
 <div>
   <label>Enter Length</label>
@@ -27,8 +27,9 @@
 <div>
   <label>Your Password</label>
   <input />
-</div>
+</div> -->
 
 <!-- <app-test></app-test> -->
 
-<div class="app-test"></div>
+<!-- <div class="app-test"></div> -->
+<div class="app-binding"></div>
